tests/inputs/syntax_errors/two_parse_errors.own

fn main() {
    let num1: i32 = 
    let num2: i32 = 92
    num3: i32 = 12
    return 0
}
